Mon Sep 12 11:16:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-android.h:
          Android doesn't have icmp support

        * docs/bczar/bczar.html:
          Added telnet

Sun Sep 11 18:11:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
          Don't copy any log files here, that has to be done in the test
          script

        * tests/run_test.pl:
          Get the log file from the target before analyzing it

Sun Sep 11 18:02:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
          Fixed executable method

Fri Sep  9 21:34:26 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlACE/Process_Win32.pm:

          Fixed a bug introduced in the previous commit to this file:
          Thu Sep  8 08:14:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

          The bug prevented any tests from running on Win32.

Fri Sep  9 19:31:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Added PutFile for the TestTarget

Fri Sep  9 19:19:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Don't copy all config files, if we need files on a target, the test
          script should copy them

Fri Sep  9 19:15:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget_Android.pm:
          Try to kill emulator and emulator-arm

Fri Sep  9 11:26:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_android.GNU:
          Android doesn't have rwho

Fri Sep  9 07:19:00 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.h:
          Doxygen changes

        * include/makeinclude/platform_android.GNU:
          Prevent flags being listed twice
